# advisiq

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  advisiq_project_brief.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7a287e53e9d9_initial_schema_tenants_users_students_.py
backend/app/: config.py  database.py  logging_config.py  main.py  security.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  interventions.py  risk.py  students.py
backend/app/ml/: model_loader.py
backend/app/ml/artifacts/: risk_model_v1.json
backend/app/models/: __init__.py  intervention.py  mixins.py  risk_score.py  student.py  tenant.py  user.py
backend/app/schemas/: admin.py  auth.py  intervention.py  risk.py  student.py  user.py
backend/app/services/: prediction.py
backend/scripts/: train_risk_model.py
backend/tests/: conftest.py  helpers.py  test_admin.py  test_auth.py  test_config.py  test_interventions.py  test_risk.py  test_students.py
data/synth/: generate_students.py  students.csv
docs/: architecture.md
docs/decisions/: 0001-deployment-and-secrets.md
frontend/: Dockerfile  README.md  next.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(protected)/: layout.tsx
frontend/src/app/(protected)/admin/: page.tsx
frontend/src/app/(protected)/dashboard/: page.tsx
frontend/src/app/(protected)/students/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/lib/: auth-context.tsx  auth-storage.ts  types.ts
frontend/src/lib/api/: admin.ts  auth.ts  client.ts  interventions.ts  risk.ts  students.ts
